deployments/istio/admin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: iam
  labels:
    app: admin
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
      version: v1
  template:
    metadata:
      labels:
        app: admin
        version: v1
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: admin
          image: registry.dev.videocoin.net/iam/admin:v0.1.0-dev.19
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 5000
          livenessProbe:
            exec:
              command: ["grpc_health_probe", "-addr=:5000"]
            initialDelaySeconds: 5
          readinessProbe:
            exec:
              command: ["grpc_health_probe", "-addr=:5000"]
            initialDelaySeconds: 10
      volumes:
        - name: secrets
          secret:
            secretName: admin

---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: iam
  labels:
    app: admin
spec:
  ports:
    - name: grpc
      port: 5000
  selector:
    app: admin
