deployments/istio/mgr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mgr
  namespace: iam
  labels:
    app: mgr
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mgr
      version: v1
  template:
    metadata:
      labels:
        app: mgr
        version: v1
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: mgr
          image: registry.dev.videocoin.net/iam/mgr:v0.1.0-dev.18
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 5000
          livenessProbe:
            exec:
              command: ["grpc_health_probe", "-addr=:5000"]
            initialDelaySeconds: 5
          readinessProbe:
            exec:
              command: ["grpc_health_probe", "-addr=:5000"]
            initialDelaySeconds: 10
      volumes:
        - name: secrets
          secret:
            secretName: mgr

---
apiVersion: v1
kind: Service
metadata:
  name: mgr
  namespace: iam
  labels:
    app: mgr
spec:
  ports:
    - name: grpc
      port: 5000
  selector:
    app: mgr
