deployments/istio/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: iam
  namespace: iam
  labels:
    istio-injection: enabled

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: iam
  namespace: iam
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "iam.dev.videocoin.net"
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/wildcard-dev-videocoin-net/tls.crt
        privateKey: /etc/istio/wildcard-dev-videocoin-net/tls.key

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iam
  namespace: iam
spec:
  hosts:
    - "iam.dev.videocoin.net"
  gateways:
    - iam
  http:
    - match:
        - uri:
            prefix: /service_accounts/v1/metadata
      route:
        - destination:
            host: metadata
            port:
              number: 8080
    - match:
        - uri:
            prefix: /v1/roles
      route:
        - destination:
            host: metadata
            port:
              number: 8080
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: iam
            port:
              number: 5000
