deployments/istio/iam.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: iam
  namespace: iam
  labels:
    istio-injection: enabled

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam
  namespace: iam
  labels:
    app: iam
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iam
      version: v1
  template:
    metadata:
      labels:
        app: iam
        version: v1
      annotations:
        sidecar.istio.io/userVolume: '[{"name":"descriptor","configMap":{"name":"proto-descriptor","items":[{"key":"iam.descriptor","path":"iam.descriptor"}]}}]'
        sidecar.istio.io/userVolumeMount: '[{"name":"descriptor","mountPath":"/etc/envoy"}]'
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: iam
          image: registry.dev.videocoin.net/iam/iam:v0.1.0-dev.11
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 5000
          livenessProbe:
            exec:
              command: ["grpc_health_probe", "-addr=:5000"]
            initialDelaySeconds: 5
          readinessProbe:
            exec:
              command: ["grpc_health_probe", "-addr=:5000"]
            initialDelaySeconds: 10
      volumes:
        - name: secrets
          secret:
            secretName: iam

---
apiVersion: v1
kind: Service
metadata:
  name: iam
  namespace: iam
  labels:
    app: iam
spec:
  ports:
    - name: grpc
      port: 5000
  selector:
    app: iam

---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: iam
  namespace: iam
  labels:
    app: iam
spec:
  filters:
    - filterConfig:
        print_options:
          add_whitespace: true
          always_print_enums_as_ints: false
          always_print_primitive_fields: true
          preserve_proto_field_names: false
        proto_descriptor: /etc/envoy/iam.descriptor
        services:
          - videocoin.iam.v1.IAM
      filterName: envoy.grpc_json_transcoder
      filterType: HTTP
      listenerMatch:
        portNumber: 5000
  workloadLabels:
    app: iam
